fix show user item align with bottom left in side bar

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -564,6 +564,9 @@ video {
   position: relative;
   width: 15rem;
   flex-shrink: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 36 / var(--tw-bg-opacity, 1));
   padding: 1.5rem;
@@ -1232,10 +1235,7 @@ video {
 }
 
 .user-profile {
-  position: absolute;
-  bottom: 1.5rem;
-  left: 1.5rem;
-  right: 1.5rem;
+  margin-top: auto;
   border-top-width: 1px;
   --tw-border-opacity: 1;
   border-color: rgb(26 37 53 / var(--tw-border-opacity, 1));
@@ -1327,8 +1327,8 @@ video {
 
 @media (max-width: 640px) {
   .sidebar {
-    position: static;
-    margin-bottom: 0px;
+    position: relative;
+    min-height: auto;
     width: 100%;
     padding: 1rem;
   }
